[gd_scene load_steps=8 format=2]

[ext_resource path="res://Source/Fonts/DejaVuSansMono.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Source/Scripts/GameConnectionSelection.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 20
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 20
use_filter = true
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Selection" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Button" type="Button" parent="Selection"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -34.0
margin_right = 289.0
margin_bottom = 40.0
text = "Singleplayer"

[node name="Button2" type="Button" parent="Selection"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -288.0
margin_top = -34.0
margin_right = 1.0
margin_bottom = 40.0
text = "Multiplayer"

[node name="InfoPopup" type="Popup" parent="Selection"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.5
margin_top = -65.0
margin_right = 160.5
margin_bottom = 65.0

[node name="ColorRect" type="ColorRect" parent="Selection/InfoPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.243137, 0.231373, 0.27451, 1 )

[node name="InfoLabel" type="Label" parent="Selection/InfoPopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.5
margin_top = -20.0
margin_right = 95.5
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="ConnectedTimer" type="Timer" parent="Selection"]
one_shot = true

[node name="MultiplayerConnected" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="RequestList" type="Timer" parent="MultiplayerConnected"]
one_shot = true

[node name="ScrollContainer" type="ScrollContainer" parent="MultiplayerConnected"]
margin_right = 411.0
margin_bottom = 598.0

[node name="VBoxContainer" type="VBoxContainer" parent="MultiplayerConnected/ScrollContainer"]
theme = SubResource( 3 )
custom_constants/separation = 5

[node name="RoomInfo" type="Control" parent="MultiplayerConnected"]
margin_left = 607.0
margin_right = 1025.0
margin_bottom = 412.0

[node name="ColorRect" type="ColorRect" parent="MultiplayerConnected/RoomInfo"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -103.0
color = Color( 0.243137, 0.231373, 0.27451, 1 )

[node name="RoomName" type="Label" parent="MultiplayerConnected/RoomInfo"]
margin_right = 414.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1

[node name="Count" type="Label" parent="MultiplayerConnected/RoomInfo"]
margin_top = 101.0
margin_right = 86.0
margin_bottom = 126.0
custom_fonts/font = SubResource( 5 )
align = 1
valign = 1

[node name="GameMode" type="Label" parent="MultiplayerConnected/RoomInfo"]
margin_top = 128.0
margin_right = 228.0
margin_bottom = 153.0
custom_fonts/font = SubResource( 5 )
align = 1
valign = 1

[node name="Port" type="LineEdit" parent="MultiplayerConnected"]
visible = false
margin_left = 666.0
margin_top = 516.0
margin_right = 1019.0
margin_bottom = 540.0
placeholder_text = "Port"

[node name="IP" type="LineEdit" parent="MultiplayerConnected"]
visible = false
margin_left = 666.0
margin_top = 483.0
margin_right = 1019.0
margin_bottom = 507.0
placeholder_text = "IP"

[node name="Connect" type="Button" parent="MultiplayerConnected"]
visible = false
margin_left = 860.0
margin_top = 430.0
margin_right = 1017.0
margin_bottom = 470.0
text = "Connect "

[node name="EnterGameCode" type="LineEdit" parent="MultiplayerConnected"]
margin_left = 834.0
margin_top = 474.0
margin_right = 1020.0
margin_bottom = 506.0
placeholder_text = "Enter Private Game Code"

[node name="JoinPrivateGame" type="Button" parent="MultiplayerConnected"]
margin_left = 896.0
margin_top = 514.0
margin_right = 1021.0
margin_bottom = 534.0
text = "Join Private Game"

[node name="CreatePrivateRoom" type="Button" parent="MultiplayerConnected"]
margin_left = 851.0
margin_top = 360.0
margin_right = 1016.0
margin_bottom = 404.0
text = "Create Private Room"

[node name="CreatePublicRoom" type="Button" parent="MultiplayerConnected"]
margin_left = 851.0
margin_top = 415.0
margin_right = 1016.0
margin_bottom = 459.0
text = "Create Public Room"

[connection signal="pressed" from="Selection/Button2" to="." method="_on_Button2_pressed"]
[connection signal="timeout" from="Selection/ConnectedTimer" to="." method="_on_ConnectedTimer_timeout"]
[connection signal="timeout" from="MultiplayerConnected/RequestList" to="." method="_on_RequestList_timeout"]
[connection signal="pressed" from="MultiplayerConnected/Connect" to="." method="_on_Connect_pressed"]
[connection signal="pressed" from="MultiplayerConnected/JoinPrivateGame" to="." method="_on_JoinPrivateGame_pressed"]
[connection signal="pressed" from="MultiplayerConnected/CreatePrivateRoom" to="." method="_on_CreatePrivateRoom_pressed"]
[connection signal="pressed" from="MultiplayerConnected/CreatePublicRoom" to="." method="_on_CreatePublicRoom_pressed"]
